2009-01-04 Harri Pitkänen <hatapitk@iki.fi>

	* Return char strings and string arrays allocated with
	  malloc() instead of new[]. This is needed to maintain
	  compatibility with some (broken) applications that were
	  written before libvoikko 1.5 and used free() to free these
	  structures. Theoretically the same should be done for
	  wchar_t interfaces, but since I know of no application that
	  uses these and has similar bug, this will not be done.

2009-01-03 Harri Pitkänen <hatapitk@iki.fi>

	* Add option VOIKKO_OPT_HYPHENATE_UNKNOWN_WORDS.
	* Print error if unknown option is given to a test tool.

2008-12-13 Harri Pitkänen <hatapitk@iki.fi>

	* Port gcanalysis.c, gcerror.c, voikko_utils.c,
	  voikko_setup.c and gccache.c to C++.

2008-12-11 Harri Pitkänen <hatapitk@iki.fi>

	* Port tokenizer and voikko_charset.c to C++.

2008-12-10 Harri Pitkänen <hatapitk@iki.fi>

	* Port sentence.c and voikko_spell.c to C++.

2008-12-07 Harri Pitkänen <hatapitk@iki.fi>

	* Port hyphenator and spelling suggestions to C++.

2008-12-05 Harri Pitkänen <hatapitk@iki.fi>

	* Add option -s to voikkohyphenate.

2008-11-16 Harri Pitkänen <hatapitk@iki.fi>

	* Start porting the library to C++.

2008-10-28 Harri Pitkänen <hatapitk@iki.fi>

	* Prevent totally incorrect hyphenation for "asukkaat.hoas.fi"

2008-10-25 Harri Pitkänen <hatapitk@iki.fi>

	* Small fixes, thanks to Reijo Tomperi and Cppcheck.
	* Remove porting.c.
	* Stop using deprecated option VOIKKO_OPT_ENCODING in testing tools.
	* Add voikko_next_grammar_error_ucs4 to public API.
	* Fix voikkohyphenate and voikkogc to (hopefully) work on Windows.

2008-10-19 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.
	* Remove use of glibc getline function.

2008-10-18 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.

2008-10-11 Harri Pitkänen <hatapitk@iki.fi>

	* Allow sentences to start with a digit.
	* Detect and handle ellipsis correctly.
	* Add option for accepting unfinished paragraphs.